# FoxTail

./: .gitignore  CMakeLists.txt  LICENSE
FoxTail/: App.hpp  CMakeLists.txt  Container.cpp  Container.h  Container.hpp  FoxTail.cpp  FoxTail.h  FoxTail.hpp  FoxTail.vcxproj  FoxTail.vcxproj.filters  Stub.cpp  Stub.h  Stub.idl  pch.h  readme.txt  stdafx.cpp  stdafx.h
FoxTail/Events/: Event.h
FoxTail/Services/: EventAggregator.h  EventAggregatorInterface.h  ServiceInterface.h  UseServices.h
FoxTail/include/: App.h  App.hpp  App2.h  Container.h  Container.hpp  FoxApp.h  FoxTail.h  FoxTail.hpp  Frame.h  PageBase.h  VectorHelpers.hpp  ViewModelBase.h  ViewModelBase.hpp  ViewModelFactory.h  ViewModelFactory.hpp  export.h
FoxTail/include/Events/: Event.h  Event.hpp  EventBus.h  EventBus.hpp  EventToken.h
FoxTail/include/Services/: UseServices.h  UseServices.hpp
FoxTail/src/: App.cpp  App.idl  Container.cpp  FoxApp.cpp  FoxApp.idl  Frame.idl  ViewModelBase.cpp  ViewModelBase.idl
FoxTail/src/Events/: EventToken.cpp
FoxTailTests/: CMakeLists.txt  Container.cpp  Event.cpp  Events.cpp  FoxTailTests.vcxproj  FoxTailTests.vcxproj.filters  Package.appxmanifest  UnitTestApp.xaml  UnitTestApp.xaml.cpp  UnitTestApp.xaml.h  VectorHelpers.cpp  ViewModelFactory.cpp  pch.h  stdafx.h
FoxTailTests.old/: Container.cpp  Events.cpp  FoxTailTests.vcxproj  stdafx.cpp
